Implemented initial version of authgear auth

--- a/public/dev/index.html
+++ b/public/dev/index.html
@@ -73,7 +73,9 @@
             <li><a data-action="profile" class="dropdown-item">Profile</a></li>
             <li><a data-action="settings" class="dropdown-item" tabindex="-1">Settings</a></li>
             <li><a id="about" data-action="about" type="button" class="dropdown-item">About</a></li>
-            <li><hr class="dropdown-divider"></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
             <li><a data-action="signout" class="dropdown-item">Sign In</a></li>
           </ul>
         </div>
