--- a/pages/dev/index.html
+++ b/pages/dev/index.html
@@ -53,12 +53,12 @@
         </a>
         <div id="searchbox" class="" style="width:300px;"></div>
         <a id="add" href="https://syndinet.com/" target="_blank" class="small text-muted bg-transparent ms-4"
-          type="button" style="display:none;">Add your videos</a>
+          type="button" style="display:none;">xAdd your videos</a>
       </div>
 
       <!-- Right side (50%) -->
       <div class="d-flex w-50 align-items-center justify-content-end gap-2">
-        <span id="navUserName" class="small fw-semibold text-uppercase d-none"></span>
+        <span id="navUserName" class="small fw-semibold d-none"></span>
         <a data-action="signin" class="btn btn-link btn-sm bg-transparent me-2" title="Sign In">
           SIGN IN
         </a>
