--- a/pages/dev/index.html
+++ b/pages/dev/index.html
@@ -53,7 +53,7 @@
         </a>
         <div id="searchbox" class="" style="width:300px;"></div>
         <a id="add" href="https://syndinet.com/" target="_blank" class="small text-muted bg-transparent ms-4"
-          type="button" style="display:none;">xyAdd your videos</a>
+          type="button" style="display:none;">Add your videos</a>
       </div>
 
       <!-- Right side (50%) -->
