--- a/pages/dev/after-signin/index.html
+++ b/pages/dev/after-signin/index.html
@@ -7,14 +7,82 @@
   <title>Sign In Successful</title>
   <script src="/src/afterSignInPage.ts" type="module"></script>
   <style>
+    :root {
+      --success-color: #16a34a;
+      --text-color: #111827;
+      --bg-color: #f9fafb;
+      --card-bg: #ffffff;
+      --border-color: #e5e7eb;
+      --shadow-color: rgba(0, 0, 0, 0.06);
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
-      background-color: #f8f9fa;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      font-family: system-ui, -apple-system, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background-color: var(--bg-color);
+      color: var(--text-color);
+    }
+
+    .card {
+      background: var(--card-bg);
+      border: 1px solid var(--border-color);
+      border-radius: 16px;
+      box-shadow: 0 8px 20px var(--shadow-color);
+      padding: 2.5rem;
+      text-align: center;
+      width: 90%;
+      max-width: 420px;
+      animation: fadeIn 0.6s ease forwards;
     }
 
     .checkmark {
       font-size: 4rem;
-      color: #28a745;
+      color: var(--success-color);
+      display: inline-block;
+      margin-bottom: 1.5rem;
       animation: pop 0.4s ease;
+    }
+
+    h4 {
+      font-weight: 700;
+      margin-bottom: 0.75rem;
+    }
+
+    p {
+      color: #6b7280;
+      font-size: 0.95rem;
+      margin-bottom: 2rem;
+    }
+
+    .spinner {
+      width: 2rem;
+      height: 2rem;
+      border: 3px solid #d1d5db;
+      border-top-color: var(--success-color);
+      border-radius: 50%;
+      animation: spin 0.8s linear infinite;
+      margin: 0 auto;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(10px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     @keyframes pop {
@@ -28,22 +96,20 @@
         opacity: 1;
       }
     }
+
+    @keyframes spin {
+      to {
+        transform: rotate(360deg);
+      }
+    }
   </style>
 </head>
 
-<body class="d-flex flex-column align-items-center justify-content-center vh-100 text-center">
-
-  <div class="card shadow-sm p-5 border-0" style="max-width: 400px;">
-    <div class="mb-4">
-      <i class="bx bx-check-circle checkmark"></i>
-    </div>
-    <h4 class="fw-bold mb-2">Sign In Successful</h4>
-    <p class="text-muted small mb-4">
-      You’ve been signed in successfully. You will be redirected shortly.
-    </p>
-    <div class="spinner-border text-success mb-3" role="status" style="width: 2rem; height: 2rem;">
-      <span class="visually-hidden">Loading...</span>
-    </div>
+<body>
+  <div class="card">
+    <h4>Sign In Successful</h4>
+    <p>You’ve been signed in successfully.<br>You will be redirected shortly.</p>
+    <div class="spinner" aria-label="Loading"></div>
   </div>
 </body>
 
