Fixed videojs tracking

--- a/pages/dev/index.html
+++ b/pages/dev/index.html
@@ -11,8 +11,8 @@
     import { Dropdown, Modal, Ripple, initMDB } from 'mdb-ui-kit'
     initMDB({ Dropdown, Modal, Ripple })
   </script>
-  <link href="/src/styles/dev.css" rel="stylesheet">
-
+  <!-- <script src="/newrelic-agent.js"></script> -->
+  <script src="/newrelic-video-videojs.min.js"></script>
 </head>
 
 <body>
