--- a/pages/after-signin/index.html
+++ b/pages/after-signin/index.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sign In Successful</title>
-  <script src="/src/afterSignInPage.ts" type="module"></script>
+  <script src="/src/pages/afterSignInPage.ts" type="module"></script>
   <style>
     :root {
       --success-color: #16a34a;
+      --error-color: #dc2626;
       --text-color: #111827;
       --bg-color: #f9fafb;
       --card-bg: #ffffff;
@@ -44,14 +45,6 @@
       animation: fadeIn 0.6s ease forwards;
     }
 
-    .checkmark {
-      font-size: 4rem;
-      color: var(--success-color);
-      display: inline-block;
-      margin-bottom: 1.5rem;
-      animation: pop 0.4s ease;
-    }
-
     h4 {
       font-weight: 700;
       margin-bottom: 0.75rem;
@@ -73,6 +66,22 @@
       margin: 0 auto;
     }
 
+    .error {
+      display: none;
+      color: var(--error-color);
+      background: #fee2e2;
+      border: 1px solid #fecaca;
+      border-radius: 8px;
+      padding: 1rem;
+      margin-top: 1.5rem;
+      font-size: 0.9rem;
+      animation: fadeIn 0.4s ease forwards;
+    }
+
+    .error.visible {
+      display: block;
+    }
+
     @keyframes fadeIn {
       from {
         opacity: 0;
@@ -82,18 +91,6 @@
       to {
         opacity: 1;
         transform: translateY(0);
-      }
-    }
-
-    @keyframes pop {
-      0% {
-        transform: scale(0.5);
-        opacity: 0;
-      }
-
-      100% {
-        transform: scale(1);
-        opacity: 1;
       }
     }
 
@@ -110,6 +107,10 @@
     <h4>Sign In Successful</h4>
     <p>You’ve been signed in successfully.<br>You will be redirected shortly.</p>
     <div class="spinner" aria-label="Loading"></div>
+
+    <div id="error-message" class="error">
+      ⚠️ Something went wrong during sign-in. Redirecting to the main page...
+    </div>
   </div>
 </body>
 
